+ Support for a radio display in multilist (can toggle dependent parameters), added CSS to display radio-set parameters with single color, updates category edit form and image field configuration CSS, fixed some bad language strings, fixed recently broken parameter in groupmarker field

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2115,8 +2115,8 @@ FLEXI_NO_CONTACT_INFORMATION="No Contact details linked to this author"
 FLEXI_MANAGE_IN_CONTACT_COMPONENT="To set contant details for current author, navigate to Components &rArr;Contacts"
 FLEXI_TOO_MANY_ITEM_CATEGORIES="Too many categories selected. You are allowed (including main category) a maximum number of "
 
-FLEXI_ITEM_PARAM_OVERRIDE_ORDER_DETAILS="\n<span style='color:darkgreen; font-weight:bold;'>NOTE: parameters that are neither --empty-- nor --Use Global--,<br/> then these will override all previously set parameters</span><br/>\n<br/>Full <b>overriding order</b> for item view is:<br/>\n<ul>\n<li>Component</li>\n<li>Menu</li>\n<li>Category</li>\n<li>Content Type</li>\n<li>Item</li>\n</ul>\n"
-FLEXI_CAT_PARAM_OVERRIDE_ORDER_DETAILS_INHERIT="\n<span style='color:darkgreen; font-weight:bold;'>NOTE: parameters that are neither --empty-- nor --Use Global--,<br/> then these will override all previously set parameters</span><br/>\n<br/>Full <b>overriding order</b> for category view is:<br/>\n<ul>\n<li>Component</li>\n<li>Inherit from <small><sup>(1)</sup></small></li>\n<li>Category</li>\n<li>Author <small><sup>(2)</sup></small></li>\n<li>Menu <small><sup>(3)</sup></small></li></ul>\n <small><sup>(1)</sup></small> If <b>Inherit parameters from</b> is enabled<br/>\n <small><sup>(2)</sup></small> If category parameter override is enabled in author configuration<br/>\n <small><sup>(3)</sup></small> If category parameter override is enabled in the category menu<br/>\n"
+FLEXI_ITEM_PARAM_OVERRIDE_ORDER_DETAILS="\n<span style='font-weight:bold;'>NOTE: parameters that are neither --empty-- nor --Use Global--,<br/> then these will override all previously set parameters</span><br/>\n<br/>Full <b>overriding order</b> for item view is:<br/>\n<ul>\n<li>Component</li>\n<li>Menu</li>\n<li>Category</li>\n<li>Content Type</li>\n<li>Item</li>\n</ul>\n"
+FLEXI_CAT_PARAM_OVERRIDE_ORDER_DETAILS_INHERIT="\n<span style='font-weight:bold;'>NOTE: parameters that are neither --empty-- nor --Use Global--,<br/> then these will override all previously set parameters</span><br/>\n<br/>Full <b>overriding order</b> for category view is:<br/>\n<ul>\n<li>Component</li>\n<li>Inherit from <small><sup>(1)</sup></small></li>\n<li>Category</li>\n<li>Author <small><sup>(2)</sup></small></li>\n<li>Menu <small><sup>(3)</sup></small></li></ul>\n <small><sup>(1)</sup></small> If <b>Inherit parameters from</b> is enabled<br/>\n <small><sup>(2)</sup></small> If category parameter override is enabled in author configuration<br/>\n <small><sup>(3)</sup></small> If category parameter override is enabled in the category menu<br/>\n"
 
 FLEXI_ALLOW_DISABLING_COMMENTS="Allow disabling comments"
 FLEXI_ALLOW_DISABLING_COMMENTS_DESC="Here you can give the ability to authors/editors to disable comments on Content Items they can edit. If you allow this it is recommended not to show item advanced parameters"
@@ -2393,8 +2393,8 @@ FLEXI_LIST_CREATION_FRONTEND_VIEWS="List Creation (Frontend Views)"
 ; Add new content for content lists (e.g. category view)
 FLEXI_SHOW_ADD_TO_LIST_BUTTON="Add button<br/><small>to Category / to List</small>"
 FLEXI_SHOW_ADD_TO_LIST_BUTTON_DESC="Enables display of Add to Category(/to List) Button for all categories/lists that the currently logged user can add"
-FLEXI_ADD_TO_LIST_MENU_ITEM="Add button menu item <br><small>(to use its configuration)"
-FLEXI_ADD_TO_LIST_MENU_ITEM_DESC="You may want to force a specific submit menu item, so that custom configuration is used, e.g. limit to specific content type(s). <br/><br/><b>NOTE 1</b>: In case you want to allow specific content type for specific categories, you should deny 'create items' ACL privilege to the users, thus they will be able to submit only via content TYPE OVERRIDE in the submit menu item. <br/><br/><b>NOTE 2</b>:  You may also want to override category ACL too"
+FLEXI_ADD_TO_LIST_BTN_MENU_ITEM="Add button menu item <br><small>(to use its configuration)</small>"
+FLEXI_ADD_TO_LIST_BTN_MENU_ITEM_DESC="You may want to force a specific submit menu item, so that custom configuration is used, e.g. limit to specific content type(s). <br/><br/><b>NOTE 1</b>: In case you want to allow specific content type for specific categories, you should deny 'create items' ACL privilege to the users, thus they will be able to submit only via content TYPE OVERRIDE in the submit menu item. <br/><br/><b>NOTE 2</b>:  You may also want to override category ACL too"
 
 
 ; Some common parameter for fields that use textarea/HTML Editor for editing
@@ -2905,7 +2905,7 @@ FLEXI_MU_OBTAINED_ACCLVL="Obtained Levels"
 FLEXI_MU_FREE_ACC="Free Access"
 FLEXI_MU_ACCLVL_NAME="Level Name"
 
-FLEXI_MU_ADD_CONDITION_OBTAINDED_ACCLVL="Add Obtained Levels</small>"
+FLEXI_MU_ADD_CONDITION_OBTAINDED_ACCLVL="Add Obtained Levels"
 FLEXI_MU_ADD_CONDITION_OBTAINDED_ACCLVL_DESC="Add markups for obtained (access) level always or only when a content item is viewable. <br/><br/><b>EXPLANATION:</b> A content item has access level for (a) itself, (b) its main category, (c) its content type. One for these access levels might not be assigned to current user, so item is unviewable, you can select whether to add markups for other access level of the item already obtained by current user."
 FLEXI_MU_ONLY_IF_VIEWABLE="Only if item viewable"
 FLEXI_MU_ALWAYS="Always"
