Adding langue string .sys ini

--- a/admin/language/en-GB.com_flexicontent.sys.ini
+++ b/admin/language/en-GB.com_flexicontent.sys.ini
@@ -42,3 +42,17 @@ FLEXICONTENT_MCATS_DESC="List items (and category information) of <b>multiple ca
 FLEXICONTENT_MCATS_TIP="List items and category information of multiple categories"
 FLEXICONTENT_MCATS="Categories"
 
+;submenu
+FLEXI_DASHBOARD="Dashboard"
+FLEXI_ITEMS="Items"
+FLEXI_CATEGORIES="Categories"
+FLEXI_ARCHIVE="Archive"
+FLEXI_TYPES="Types"
+FLEXI_FIELDS="Fields"
+FLEXI_TAGS="Tags"
+FLEXI_TEMPLATES="Templates"
+FLEXI_USERS="Users"
+FLEXI_FILEMANAGER="Files"
+FLEXI_IMPORT="Import"
+FLEXI_STATISTICS="Statistics"
+FLEXI_CONFIG="Configuration"
