# Fixed wrong field name in multi-value date field causing some values to be lost during saving

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -762,6 +762,8 @@ FLEXI_FIELD_DEFAULT_VALUES_DESC="Choose default values or leave blank for none. 
 FLEXI_FIELD_DEFAULT_VALUES="Default values"
 FLEXI_FIELD_DISPLAY_LABEL_DESC="Display or hide label of this field"
 FLEXI_FIELD_DISPLAY_LABEL="Display label"
+FLEXI_FIELD_DISABLE_KEYBOARD_INPUT="Disable keyboard input"
+FLEXI_FIELD_DISABLE_KEYBOARD_INPUT_DESC="Enable this option if you want to disable keyboard input."
 
 FLEXI_FIELD_USE_BUTTONS_DESC="Select to display links or button or other"
 FLEXI_FIELD_USE_BUTTONS="Use buttons"
@@ -1869,6 +1871,7 @@ FLEXI_PDF_FORMAT_FIELDS_DESC="Optionally include core/custom fields columns into
 
 FLEXI_BASIC_PARAMS_LABEL="Basic Configuration"
 FLEXI_FIELD_VALUES="Values"
+FLEXI_FIELD_VALUE="Value"
 FLEXI_FIELD_LABEL_AND_ACCESS="Label and access"
 FLEXI_VALUE_CREATION_LABEL="Values Creation"
 FLEXI_PREFIX_SUFFIX_SEPARATOR_LABEL="Prefix - Suffix - Separator"
