--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -1305,7 +1305,7 @@ FLEXI_NUMERIC="Numeric"
 FLEXI_FILTER_TYPES="Filterable field types"
 FLEXI_FILTER_TYPES_DESC="List of the filterable field types. DO NOT TOUCH except if you know exactly what you are doing ;)"
 FLEXI_REQUIRED="Required"
-FLEXI_REQUIRED_DESC="Required field in the item entry form"
+FLEXI_REQUIRED_DESC="Required field in the item form"
 FLEXI_AUTOLOGIN="Enable preview auto-login"
 FLEXI_AUTOLOGIN_DESC="If yes the username and password will be added to the preview URL to log-in the user automatically."
 FLEXI_ENABLE_TRIGGER_ONPREPARECONTENT_EVENT_CAT_DESC="Enable this option if you want to trigger content plugins (onPrepareContent) on the category description. Keep in mind not every plugin will work outside com_content."
