Add slider mode in fliter module

--- a/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
+++ b/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
@@ -192,3 +192,4 @@ FLEXI_RELOADING_PLEASE_WAIT="Reloading, please wait ...<br/>"
 FLEXI_SELECT_CAT="Select Category"
 FLEXI_FILTER_CATEGORY="Category"
 FLEXI_FILTER_CATEGORIES="Categories"
+FLEXI_SLIDER_SEARCH="Search"
