language string for filter module

--- a/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
+++ b/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
@@ -6,6 +6,10 @@ FLEXI_FILTER_TARGET_CAT="Target Category"
 ; BASIC configuration: layout,etc
 FLEXI_CHOOSE_TMPL="Layout"
 FLEXI_CHOOSE_TMPL_DESC="Choose a layout to render your module.<br><b>default: </b>Creates a list of item titles<br><b>news: </b>Displays various selected fields for the items (Please enter the field names at 'Display Parameters'==>'Field Parameters')<br><b>select: </b>Displays a dropdown select box of item titles"
+FLEXI_SLIDER_SEARCH_TEXT="Title of slider"
+FLEXI_SLIDER_SEARCH_TEXT_DESC="Tip your slider title"
+FLEXI_SLIDER_MOD="Slider mode"
+FLEXI_SLIDER_MOD_DESC="Put input and filter in a slider"
 
 ; TARGET CATEGORY(-ies) configuration
 FLEXI_SELECT_ONE_CATEGORY="Select category"
