--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -3132,3 +3132,9 @@ FLEXI_NAV_SD_USERS_N_GROUPS="Users & Groups"
 FLEXI_NAV_SD_EXPERT_USAGE="Expert Usage"
 
 FLEXI_REQUIRES_FIELDGROUP_FIELD="Enable only if you have installed 'fieldgroup' field"
+
+FLEXI_SLIDER_SEARCH_MOD ="Display for search zone"
+FLEXI_SEARCH_MOD ="Slider mode"
+FLEXI_SEARCH_MOD_DESC ="Select Yes to display all search zone in a slider"
+FLEXI_SLIDER_NAME ="Slider title"
+FLEXI_SLIDER_NAME_DESC="Tip title of slider"
