^ Somes Changes for filters form in slider (added to menu items too) and for component parameters TAB restructuring, fixed language being visible in frontend item form when it is disabled, some CSS changes, fixed item count for top-level category in directory view

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -1180,6 +1180,7 @@ FLEXI_REDIRECTIONS_CONF="Redirections Configuration"
 FLEXI_VERSIONING_CONF="Versioning Configuration"
 FLEXI_DISABLE_LANG_SELECT="Disable language selector"
 FLEXI_DISABLE_LANG_SELECT_DESC="Disable language selector in the items view (it will still be available in any other views)"
+FLEXI_GENERAL_DISPLAY_CONF="General display"
 FLEXI_GC="Auto purge expired cache"
 FLEXI_GC_DESC="Auto purge the expired cache. If you encounter error messages with the cache, you may have to disable this parameter."
 FLEXI_LOGIN_PAGE="Login page"
@@ -2512,6 +2513,15 @@ FLEXI_CUSTOM_FILTER_ELEMENTS_OR_QUERY_DESC="Custom elements or SQL query. <br/><
 
 ; enhancements of search/filtering : Filter Form configuration
 FLEXI_SEARCH_FILTER_FORM="Form <small>(Text Search / Field Filters)</small>"
+FLEXI_FILTERING="Filtering"
+
+FLEXI_SEARCH_FILTER_FORM_PLACEMENT="Form placement"
+FLEXI_SEARCH_FILTER_FORM_PLACEMENT_DESC="Select how the form container will be placed/opened"
+FLEXI_SEARCH_FILTER_FORM_INLINE="Inline"
+FLEXI_SEARCH_FILTER_FORM_SLIDER="Slider"
+FLEXI_TOGGLE_SEARCH_FORM_CUSTOM_TITLE="Text of Form toggle button"
+FLEXI_TOGGLE_SEARCH_FORM_CUSTOM_TITLE_DESC="The text of button/link for opening/displaying the search form, default is 'Search'"
+
 FLEXI_SEARCH_GO_BUTTON="Go Button"
 FLEXI_SEARCH_GO_BUTTON_DESC="Submit form reloading current listing, <br/><br/><b>Note</b>:<br/> that this will submit text search, field filters and alpha index (when any of these is present)"
 FLEXI_SEARCH_RESET_BUTTON="Reset Button"
@@ -3132,9 +3142,3 @@ FLEXI_NAV_SD_USERS_N_GROUPS="Users & Groups"
 FLEXI_NAV_SD_EXPERT_USAGE="Expert Usage"
 
 FLEXI_REQUIRES_FIELDGROUP_FIELD="Enable only if you have installed 'fieldgroup' field"
-
-FLEXI_SLIDER_SEARCH_MOD ="Display for search zone"
-FLEXI_SEARCH_MOD ="Slider mode"
-FLEXI_SEARCH_MOD_DESC ="Select Yes to display all search zone in a slider"
-FLEXI_SLIDER_NAME ="Slider title"
-FLEXI_SLIDER_NAME_DESC="Tip title of slider"
