--- a/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
+++ b/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
@@ -6,10 +6,6 @@ FLEXI_FILTER_TARGET_CAT="Target Category"
 ; BASIC configuration: layout,etc
 FLEXI_CHOOSE_TMPL="Layout"
 FLEXI_CHOOSE_TMPL_DESC="Choose a layout to render your module.<br><b>default: </b>Creates a list of item titles<br><b>news: </b>Displays various selected fields for the items (Please enter the field names at 'Display Parameters'==>'Field Parameters')<br><b>select: </b>Displays a dropdown select box of item titles"
-FLEXI_SLIDER_SEARCH_TEXT="Title of slider"
-FLEXI_SLIDER_SEARCH_TEXT_DESC="Tip your slider title"
-FLEXI_SLIDER_MOD="Slider mode"
-FLEXI_SLIDER_MOD_DESC="Put input and filter in a slider"
 
 ; TARGET CATEGORY(-ies) configuration
 FLEXI_SELECT_ONE_CATEGORY="Select category"
@@ -71,6 +67,30 @@ FLEXI_ONE_RECORD_PER_ROW="One record per row"
 FLEXI_ONE_RECORD_PER_ROW_DESC="Select how the records will be placed: <br/>-- Display a single record per row, or <br/>-- Use a custom separator"
 FLEXI_NO_USE_SEPARATOR="No, use separator"
 FLEXI_YES_BUT_FILTER_BELOW_LABEL="Yes, but filter below label"
+
+FLEXI_BUTTON_CLASS_GO="Go class"
+FLEXI_BUTTON_CLASS_GO_DESC="Class for Go button, use value in selectlist or tip your custom class"
+FLEXI_BUTTON_CLASS_RESET="Reset class"
+FLEXI_BUTTON_CLASS_RESET_DESC="Class for Go button, use value in selectlist or tip your custom class"
+FLEXI_BUTTON_CLASS_FCBUTTON="Flexicontent class"
+FLEXI_BUTTON_CLASS_PRIMARY="Bootstrap primary (blue)"
+FLEXI_BUTTON_CLASS_SUCCESS="Bootstrap success (green)"
+FLEXI_BUTTON_CLASS_INFO="Bootstrap info (light blue)"
+FLEXI_BUTTON_CLASS_WARNING="Bootstrap warning (orange)"
+FLEXI_BUTTON_CLASS_DANGER="Bootstrap danger (red)"
+FLEXI_BUTTON_CLASS_INVERSE="Bootstrap inverse (black)"
+FLEXI_BUTTON_CLASS_GO_CUSTOM="Custom class"
+FLEXI_BUTTON_CLASS_GO_CUSTOM_DESC="Add custom class for go button, like uk-button uk-button-large for a warp 7 template"
+FLEXI_BUTTON_CLASS_RESET_CUSTOM="Custom class"
+FLEXI_BUTTON_CLASS_RESET_CUSTOM_DESC="Add custom class for reset button, like uk-button uk-button-large for a warp 7 template"
+FLEXI_USE_CUSTOM_BELOW="Use custom class bellow"
+
+FLEXI_SEARCH_FILTER_FORM_PLACEMENT="Form placement"
+FLEXI_SEARCH_FILTER_FORM_PLACEMENT_DESC="Select how the form container will be placed/opened"
+FLEXI_SEARCH_FILTER_FORM_INLINE="Inline"
+FLEXI_SEARCH_FILTER_FORM_SLIDER="Slider"
+FLEXI_TOGGLE_SEARCH_FORM_CUSTOM_TITLE="Text of Form toggle button"
+FLEXI_TOGGLE_SEARCH_FORM_CUSTOM_TITLE_DESC="The text of button/link for opening/displaying the search form, default is 'Search'"
 
 ; enhancements of search/filtering : Params Headers
 FLEXI_TEXT_SEARCH="Text Search"
@@ -196,4 +216,4 @@ FLEXI_RELOADING_PLEASE_WAIT="Reloading, please wait ...<br/>"
 FLEXI_SELECT_CAT="Select Category"
 FLEXI_FILTER_CATEGORY="Category"
 FLEXI_FILTER_CATEGORIES="Categories"
-FLEXI_SLIDER_SEARCH="Search"
+FLEXI_SEARCH_FORM_TOGGLE="Search"
