--- a/site/language/en-GB.com_flexicontent.ini
+++ b/site/language/en-GB.com_flexicontent.ini
@@ -374,6 +374,7 @@ FLEXI_ADD_NEW_CONTENT="Add new content"
 FLEXI_CREATED_ON="Creation Date: %s"
 
 ; Search/Filter Form
+FLEXI_SEARCH_FORM_TOGGLE="Search"
 FLEXI_CLICK_HERE_TO_RETURN="Please click <a href=%s>here</a> to return previous page"
 FLEXI_FILTERS_CHANGED_CLICK_TO_SUBMIT="Filters changed, please click to submit when done"
 FLEXI_APPLY_FILTERING="Apply Filtering"
