^ Restructured component parameters

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2058,6 +2058,10 @@ FLEXI_EMAIL_NOTIFICATIONS_CONF="Email Notifications"
 FLEXI_EMAIL_NOTIFICATIONS_ASSIGNED_ITEM_CONF="Email Notifications: <small>for assigned items</small>"
 FLEXI_CONTENT_NOTIFICATIONS_CONF="Content submit/change notifications"
 
+FLEXI_IMPORT_CONF="Import"
+FLEXI_WORKFLOW_CONF="Workflow"
+FLEXI_NOTIFICATIONS_CONF="Notifications"
+
 FLEXI_ENABLE="Enable"
 FLEXI_DISABLE="Disable"
 FLEXI_MODULE="Module"
@@ -2242,7 +2246,13 @@ FLEXI_USED_IN_ITEM_VIEW_ONLY="Used in Item view only"
 FLEXI_ITEM_VIEW="Item view"
 FLEXI_SINGLE_CONTENT="Single Content"
 FLEXI_CONTENT_LISTS="Content Lists"
-FLEXI_VARIOUS_VIEWS="Various views"
+FLEXI_LISTS_CATDATA_CONF="Lists: Category data"
+FLEXI_LISTS_ITEMDATA_CONF="Lists: Item data"
+FLEXI_LISTS_FILTERING_CONF="Lists: Filtering"
+FLEXI_LISTS_MARKUPS_CONF="Lists: Markups"
+FLEXI_LISTS_RSS_CONF="Lists: RSS"
+FLEXI_VIEWS_COMMON_CONF="Views: Common"
+FLEXI_VIEWS_SPECIFIC_CONF="Views: Specific"
 FLEXI_FIELD_MODULE_STYLE="Module chrome style <br/><small>module chrome defines container html/css to use</small>"
 FLEXI_FIELD_MODULE_STYLE_DESC="Set a module chrome style (container) for your module <br/><br/><b>NOTE:</b><br/>Joomla standard chrome styles are: rounded,none,table,horz,xhtml, <br/><br/><b>NOTE:</b><br/>Your Joomla Template may have more,<br/><br/>-- to <b>find these</b>, open file:<br/> PATH_TO_JOOMLA/templates/TEMPLATE_NAME/html/modules.php<br/><br/> and check for function names like:<br/> modChrome_STYLE()<br/> <b>STYLE</b> is the extra module chrome styles available ..."
 FLEXI_TAGS_DEFAULT_MENU_ITEMID="Default Menu Itemid<br/><small>for Tags View Default Configuration</small>"
@@ -2314,7 +2324,9 @@ FLEXI_CHOOSE_SPECIFIC_MOBILE_LAYOUT_DESC="Set a layout to be used when it is det
 FLEXI_CHOOSE_SPECIFIC_MOBILE_LAYOUT="Mobile Layout"
 FLEXI_USE_DESKTOP="- Use Desktop -"
 
+FLEXI_MOBILE="Mobile"
 FLEXI_MOBILE_DEVICES_CONF="Mobile Devices"
+FLEXI_MOBILE_DEVICES_CONF_DESC="This will serve different HTML to mobile devices, aka a 'mobile version'. <br/> NOTE: this effects the component area, and not the full web-site"
 FLEXI_USE_MOBILE_LAYOUTS="Use Mobile Layouts"
 FLEXI_USE_MOBILE_LAYOUTS_DESC="Enable this to use mobile layouts in FLEXIcontent content / content list views <br/><br/><b>NOTE:</b> In fields mobile settings are always used"
 FLEXI_MOBILE_NO_ONLY_IN_FIELDS="No, only in fields"
@@ -2780,11 +2792,12 @@ FLEXI_SUBMIT_RECOMMENDED="Submit (Recommended)"
 FLEXI_SUBMIT_EDIT="Submit / Edit"
 
 ; Item Form TABs
-FLEXI_FORM_CORE_PROPS_PLACEMENT="CORE properties placement"
-FLEXI_NOT_PLACED_FIELDS_AND_DISABLING="Please note that <br/> - any not placed fields, will be displayed at bottom of the page <br/> - if you want to disable fields, please do so via appropriate parameters"
+FLEXI_ITEM_FORM_LAYOUT="Item form layout"
+FLEXI_FORM_CORE_FIELDS_N_PROPS="CORE fields (&amp; properties)"
+FLEXI_NOT_PLACED_FIELDS_AND_DISABLING="- this is for CORE fields/properties, CUSTOM fields are always placed via field manager <br/> - any CORE fields/properties not added here, will be displayed at bottom of the page <br/> - to disable CORE fields/properties, do so via appropriate parameters"
 
 FLEXI_PLACEMENT_INSIDE_DEFAULT_TABS="Placement inside default TABs <br/> <small><b>NOTE 1:</b> Enter: _skip_ to hide the TAB, and leave it empty to restore its default value, </small> <br/> <small><b>NOTE 2:</b> not placed CORE properties will be added below the TABs and cause a warning to be shown</small>"
-FLEXI_PLACEMENT_VIA_FIELDS_MANAGER="Fields manager placement (together with CUSTOM fields) <br/> <small><b>NOTE 1:</b> order by using CORE or 'CORE property' fields (create 'core property' fields for properties not having a CORE field)</small> <br/> <small><b>NOTE 2:</b> fields manager support: TABs, fieldsets, and custom HTML (via a special item form field)</small>"
+FLEXI_PLACEMENT_VIA_FIELDS_MANAGER="Placement via Fields manager <br/><small><b>NOTE 1:</b> Copy above names here and then order by using CORE or 'CORE property' fields (create 'core property' fields for properties not having a CORE field)</small> <br/> <small><b>NOTE 2:</b> fields manager support: TABs, fieldsets, and custom HTML (via a special item form field)</small>"
 
 FLEXI_ABOVE_TABS="Above TABs"
 FLEXI_BELOW_TABS="Below TABs"
@@ -2881,6 +2894,7 @@ FLEXI_INTEGER="Integer"
 FLEXI_FLOAT="Float"
 
 ; Content Markups in Content Lists and Content View
+FLEXI_MARKUPS="Markups"
 FLEXI_FEATURED_CATEGORIES="Featured Categories"
 FLEXI_FEATURED_CATEGORIES_DESC="Featured Categories, these ara categories that contain content that can receive special markups in listings and/or is presented in special places, etc"
 FLEXI_USE_JOOMLA_FEATURED_FLAG="Use Joomla Featured Flag"
@@ -3073,6 +3087,8 @@ FLEXI_BE_NEW="New"
 FLEXI_UPLOAD="Upload"
 FLEXI_WHY="Why"
 FLEXI_HOW_TO="How to"
+
+FLEXI_BASIC_DISPLAY="Basic Display"
 
 FLEXI_DISPLAY_FEATURED_ITEMS="Include / exclude items marked as featured"
 FLEXI_DISPLAY_FEATURED_ITEMS_DESC="Some of the category items are flagged as featured. Select here to include / exclude these from the item list"
