--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -3158,3 +3158,4 @@ FLEXI_NAV_SD_USERS_N_GROUPS="Users & Groups"
 FLEXI_NAV_SD_EXPERT_USAGE="Expert Usage"
 
 FLEXI_REQUIRES_FIELDGROUP_FIELD="Enable only if you have installed 'fieldgroup' field"
+FLEXI_FIELD_GROUPING="Field grouping"
