# Add flag isnew in item model for usage in fields, fixed notice for multiproperty fields search index, replaced remaining mootool tooltips, in recently revised backend views

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -35,6 +35,10 @@ FLEXI_PLUGINS="Plugins"
 FLEXI_SUPPORT="Help"
 FLEXI_TO_WRITE="Draft :: Unpublished"
 
+; backend screens, common
+FLEXI_DISPLAY_ENTRY_IN_FRONTEND_DESC="Click to display this entry in frontend, inside a new browser window"
+FLEXI_DISPLAY_RSS_IN_FRONTEND_DESC="Click to display the RSS listing of this entry in frontend, inside a new browser window"
+
 ; Items screen
 FLEXI_ASSOCIATONS="Associations"
 FLEXI_ASSIGNMENTS="Assignments"
@@ -1878,8 +1882,8 @@ FLEXI_VALUE_CREATION_LABEL="Values Creation"
 FLEXI_PREFIX_SUFFIX_SEPARATOR_LABEL="Prefix - Suffix - Separator"
 FLEXI_DISPLAY_PARAMS_LABEL="Display Configuration"
 
-FLEXI_CLICK_TO_RELEASE_YOUR_LOCK="<a class='jgrid hasTip' title='::Record was locked (e.g. edited) by you (<b>%s</b>) at %s.<br/><br/> Click icon to <b>unlock</b> (check-in) this record. This will allow other users to edit/publish/etc the record.<br/><br/> Alternatively you can unlock this record by clicking save or cancel in record edit form.' href='javascript:;' onclick='var ccb=$(%s); ccb.checked=1; ccb.form.task.value=%s; ccb.form.submit();'><img src='components/com_flexicontent/assets/images/lock_delete.png' alt='Check-in' /></a>&nbsp;"
-FLEXI_CLICK_TO_RELEASE_FOREIGN_LOCK="<a class='jgrid hasTip' title='::Record was locked (e.g. edited) by user: (<b>%s</b>) at %s.<br/><br/> Click icon to <b>unlock</b> (check-in) this record. This will allow other users to edit/publish/etc the record.<br/><br/> PLEASE NOTE that the record is probably (currently) editted by this user, unloking it may cause confusion/problem, if this user tries to save the record' href='javascript:;' onclick='var ccb=$(%s); ccb.checked=1; ccb.form.task.value=%s; ccb.form.submit();'><img src='components/com_flexicontent/assets/images/lock_delete.png' alt='Check-in' /></a>&nbsp;"
+FLEXI_CLICK_TO_RELEASE_YOUR_LOCK_DESC="Record was locked (e.g. edited) by you (<b>%s</b>) at %s.<br/><br/> Click icon to <b>unlock</b> (check-in) this record. This will allow other users to edit/publish/etc the record.<br/><br/> Alternatively you can unlock this record by clicking save or cancel in record edit form."
+FLEXI_CLICK_TO_RELEASE_FOREIGN_LOCK_DESC="Record was locked (e.g. edited) by user: (<b>%s</b>) at %s.<br/><br/> Click icon to <b>unlock</b> (check-in) this record. This will allow other users to edit/publish/etc the record.<br/><br/> PLEASE NOTE that the record is probably (currently) editted by this user, unloking it may cause confusion/problem, if this user tries to save the record"
 FLEXI_RECORD_CHECKED_OUT_DIFF_USER="Record was checked-out by a different user"
 FLEXI_RECORD_CHECKED_IN_SUCCESSFULLY="%s record(s) checked-in successfully"
 
@@ -2291,8 +2295,9 @@ FLEXI_NO_ACCESS_LEVEL_TO_EDIT_FIELD="You don't have an access level that permits
 FLEXI_NO_ACCESS_LEVEL_TO_VIEW_CATEGORY_TREE="You don't have an access level that permits viewing category tree"
 
 ; Re-ordering enhancements
-FLEXI_REORDERING_DISABLED_TIP="Ordering Tip::You need to click to order column first, before you can change/save record ordering"
-FLEXI_REORDERING_ENABLED_TIP="Ordering Tip::Please set ordering number and click save when done"
+FLEXI_REORDERING="Reordering"
+FLEXI_REORDERING_DISABLED_DESC="You need to click to order column first, before you can change/save record ordering"
+FLEXI_REORDERING_ENABLED_DESC="Please set ordering number and click save when done"
 FLEXI_ORDER_SAVE_WHEN_DONE="Click save button (above) when done"
 FLEXI_ORDER_COLUMN_FIRST="Order column first"
 
