--- a/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
+++ b/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
@@ -134,6 +134,8 @@ FLEXI_MODULE_CLASS_SUFFIX="Module Class Suffix"
 FLEXI_MODULE_CLASS_SUFFIX_DESC="A suffix to be applied to the css class of the module, this allows individual module styling."
 FLEXI_CACHING="Caching"
 FLEXI_CACHING_DESC="Select whether to cache the content of this module."
+FLEXI_ADD_DEFAULT_CSS="Add Default CSS"
+FLEXI_ADD_DEFAULT_CSS_DESC="Add FLEXIcontent Default CSS for this module"
 
 ; FRONTEND
 FLEXI_ADV_MOD_SEARCH_PROMPT="Search ..."
