--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2505,6 +2505,7 @@ FLEXI_FIELD_PLACEHOLDER_DESC="A word / short text inside the input visible befor
 
 FLEXI_FIELD_ALTERNATIVE_DISPLAY="Alternative Display"
 FLEXI_FIELD_NUMBER_OF_VALUES="Number of values"
+FLEXI_FIELD_OVERRIDE_DEFAULT="Override default"
 
 ; enhancements of search/filtering
 FLEXI_FILTERING_CONF="Filtering"
