^ Updated 'fcpagenav' (next/previous article navigation) plugin to new parameter layout, minor other changes and added missing language strings in textarea regex TABBING perameters

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -976,6 +976,7 @@ FLEXI_STRIP_HTML_DESC="Strip HTML tags in the main text block"
 FLEXI_STRIP_HTML="Strip HTML tags"
 FLEXI_USE_IMAGE_DESC="Extract the first image from the text or use the above field"
 FLEXI_USE_IMAGE="Use image"
+FLEXI_IMAGE_SIZE="Image size"
 
 FLEXI_PARAMETERS_HANDLING="Parameter handling"
 FLEXI_PARAMETERS_ITEM_BASIC="Basic"
