# Fixed select,radio(image),checkbox(image) field not possible to disable JS lib (select2 and prettyCheckable), minor fixes in backend items and fields view for cases that a filter has a value of '0'

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -275,6 +275,7 @@ FLEXI_FIELD_LABEL="Label"
 FLEXI_FIELD_NAME="Name"
 FLEXI_EDIT_FIELD="Edit field"
 FLEXI_NO="No"
+FLEXI_NO_CASCADE="No cascade"
 FLEXI_NOT_AVAILABLE="N/A"
 FLEXI_NO_TYPES_ASSIGNED="You didn't assign any type to this field"
 FLEXI_WARNING="Warning !!!"
