# Updates in XML files for parameter show/hide dependencies

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -3076,6 +3076,8 @@ FLEXI_CATS_INHERIT_PARAMS_DEBUG="Debug parameter heritage"
 FLEXI_CATS_INHERIT_PARAMS_DEBUG_DESC="Will display parameter heritage info in frontend"
 
 ; other common, generic terms
+FLEXI_INSIDE="Inside"
+FLEXI_OUTSIDE="Before"
 FLEXI_BEFORE="Before"
 FLEXI_AFTER="After"
 FLEXI_ALL="All"
