^ Updates for parameter dependencies in modules and related CSS, + added ajax JS of calling module/plugin functions code to backend controller too

--- a/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
+++ b/modules/mod_flexicontent/languages/en-GB.mod_flexicontent.ini
@@ -17,6 +17,7 @@ FLEXI_IMAGE_POSITION="Image position"
 FLEXI_IMAGE_POSITION_DESC="The position of the image in the block."
 FLEXI_IMAGE_LEFT="Left"
 FLEXI_IMAGE_RIGHT="Right"
+FLEXI_DEFAULT_IMAGE="Default Image"
 
 ;### Common
 FLEXI_NO="No"
@@ -186,7 +187,7 @@ FLEXI_CURRENT_USER_MY_ITEMS="Current Logged User (=My Items)"
 
 
 ;### Part 3
-FLEXI_TITLE="Title parameters"
+FLEXI_TITLE_PARAMS="Title parameters"
 FLEXI_MAX_TITLE_LENGTH="Max. Title length"
 FLEXI_MAX_TITLE_LENGTH_DESC="Max. length of the title."
 FLEXI_DISPLAY_TITLE="Display title"
@@ -194,9 +195,9 @@ FLEXI_DISPLAY_TITLE_DESC="Display hide title"
 FLEXI_LINK_TITLE="Link title"
 FLEXI_LINK_TITLE_DESC="Open the item when clicking on the Title"
 
-FLEXI_TEXT_PARAMS="Text parameters"
-FLEXI_DISPLAY_TEXT="Display text"
-FLEXI_DISPLAY_TEXT_DESC="Display text"
+FLEXI_TEXT_PARAMS="Description parameters"
+FLEXI_DISPLAY_TEXT="Display description"
+FLEXI_DISPLAY_TEXT_DESC="Display description text"
 FLEXI_STRIP_HTML_N_CUT="Strip tags and cut text"
 FLEXI_STRIP_HTML_N_CUT_DESC="Controls whether the text will be stripped of html tags and then cut to a maximum length"
 FLEXI_SHOW_READMORE="Show readmore"
