--- a/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
+++ b/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
@@ -67,7 +67,9 @@ FLEXI_ONE_RECORD_PER_ROW="One record per row"
 FLEXI_ONE_RECORD_PER_ROW_DESC="Select how the records will be placed: <br/>-- Display a single record per row, or <br/>-- Use a custom separator"
 FLEXI_NO_USE_SEPARATOR="No, use separator"
 FLEXI_YES_BUT_FILTER_BELOW_LABEL="Yes, but filter below label"
+FLEXI_PLACE_IN_TABS="Place in tabs"
 
+FLEXI_BUTTONS="Buttons"
 FLEXI_BUTTON_CLASS_GO="Go class"
 FLEXI_BUTTON_CLASS_GO_DESC="Class for Go button, use value in selectlist or tip your custom class"
 FLEXI_BUTTON_CLASS_RESET="Reset class"
@@ -91,6 +93,7 @@ FLEXI_SEARCH_FILTER_FORM_INLINE="Inline"
 FLEXI_SEARCH_FILTER_FORM_SLIDER="Slider"
 FLEXI_TOGGLE_SEARCH_FORM_CUSTOM_TITLE="Text of Form toggle button"
 FLEXI_TOGGLE_SEARCH_FORM_CUSTOM_TITLE_DESC="The text of button/link for opening/displaying the search form, default is 'Search'"
+FLEXI_TOGGLE_SEARCH_FORM_MODULE="Search"
 
 ; enhancements of search/filtering : Params Headers
 FLEXI_TEXT_SEARCH="Text Search"
@@ -162,6 +165,7 @@ FLEXI_SPACE="Space"
 FLEXI_COMMA="Comma"
 FLEXI_CONVERT_OPEN_CLOSE_TEXTS_TO_SEPARATOR="Convert Opening/Closing Texts to Separator"
 FLEXI_NOCHAR_EMPTY_SEPARATOR="Empty (No characters)"
+FLEXI_CLOSE_OPEN_TEXTS_AS_SEP="Texts: Closing + Opening"
 
 ; SHOWING
 FLEXI_SHOW="Show"
