--- a/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
+++ b/modules/mod_flexifilter/languages/en-GB.mod_flexifilter.ini
@@ -173,7 +173,8 @@ FLEXI_HIDE="Hide"
 FLEXI_AUTO="Automatic"
 FLEXI_YES_AS_TIP="Yes, as popup Tooltip"
 FLEXI_YES_AS_INLINE="Yes, as inline Text"
-
+FLEXI_HIDE="Hide"
+FLEXI_SHOW="Show"
 
 
 ; Module contents hiding / displaying configuration
