^ Restructed Type configuration form

--- a/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
+++ b/modules/mod_flexiadvsearch/languages/en-GB.mod_flexiadvsearch.ini
@@ -32,6 +32,8 @@ FLEXI_MOD_SHOW_GO_BUTTON="Show"
 FLEXI_MOD_SHOW_GO_BUTTON_DESC="Displays a go / search (submit) button, otherwise the user can submit only by clicking enter inside the text search field"
 FLEXI_NO="No"
 FLEXI_YES="Yes"
+FLEXI_HIDE="Hide"
+FLEXI_SHOW="Show"
 
 FLEXI_MOD_BUTTON_POSITION="Position"
 FLEXI_MOD_BUTTON_POSITION_DESC="Position of the button relative to the search box"
