--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -1628,6 +1628,9 @@ FLEXI_IDS_SKIPPED="Skipped unauthorized IDs"
 FLEXI_BACKEND_ITEM_FORM="Item Form (Backend)"
 FLEXI_FRONTEND_ITEM_FORM="Item Form (Frontend)"
 FLEXI_FRONTEND_BACKEND_ITEM_FORM="Item Form (Frontend AND Backend)"
+FLEXI_ITEM_FORM_FE="Item Form (FE)"
+FLEXI_ITEM_FORM_BE="Item Form (BE)"
+FLEXI_ITEM_FORM_FE_BE="Item Form (FE/BE)"
 FLEXI_GENERAL_FORM_BEHAVIOR="General Form Behavior"
 FLEXI_MENU_OVERRIDE_GENERAL_FORM_BEHAVIOR="<b style='color:darkgreen;'>override:</b> General Form Behavior"
 FLEXI_MENU_OVERRIDE_FORM_DISPLAY="<b style='color:darkgreen;'>override:</b> Optional Form Data"
@@ -1849,7 +1852,7 @@ FLEXI_EXISTING_ITEM_NOT_SAVED="Changes to the content were not saved"
 FLEXI_FIELD_VALUE_IS_INVALID="Field %s has invalid value."
 
 ; items manager configuration
-FLEXI_ITEMS_MANAGER_CONF="Items Manager Configuration"
+FLEXI_ITEMS_MANAGER="Items Manager"
 
 FLEXI_ITEMS_MANAGER_EXTRA_FIELDS="Custom Fields for Items List"
 FLEXI_ITEMS_MANAGER_EXTRA_FIELDS_DESC="Optionally include custom fields columns into the items list.<br/><br/><b>NOTE:</b> Do not to include custom fields that do not fit or will clutter the list, <br/><br/><b>NOTE:</b> Some fields will cause problems when displayed in backend, in such a case try using a more friendly display variable (default is 'display') OR remove them from the list., <br/><br/><b>NOTE:</b> You can customize this in every content type configuration. Per content type fields will be displayed, when you - filter - the items manager listing via the content type filter. <br/><br/><b>FORMAT:</b> fieldname1, fieldname2, fieldname3:dispname3, fieldname4:dispname4, fieldname5"
