+ Added support for any installed (and properly configured) Joomla Captcha plugin, some parameter layout clean ups related to item form. Also fixed reloading of CORE fields when redirects back to form because of (a) captcha check failed, (b) an FC field canceled item saving during onBeforeSaveField event

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -1632,11 +1632,10 @@ FLEXI_ITEM_FORM_FE="Item Form (FE)"
 FLEXI_ITEM_FORM_BE="Item Form (BE)"
 FLEXI_ITEM_FORM_FE_BE="Item Form (FE/BE)"
 FLEXI_GENERAL_FORM_BEHAVIOR="General Form Behavior"
-FLEXI_MENU_OVERRIDE_GENERAL_FORM_BEHAVIOR="<b style='color:darkgreen;'>override:</b> General Form Behavior"
-FLEXI_MENU_OVERRIDE_FORM_DISPLAY="<b style='color:darkgreen;'>override:</b> Optional Form Data"
-FLEXI_MENU_OVERRIDE_SUBMIT_PUBLISH_ACL="<b style='color:darkgreen;'>override:</b> Submit/publish ACL"
-FLEXI_MENU_OVERRIDE_CATEGORY_ACL="<b style='color:darkgreen;'>override:</b> Category ACL"
-FLEXI_MENU_OVERRIDE_FORM_CONF_ACL_DESC="<span style='color:darkgreen; font-weight:normal;'>In order to configure the (Frontend) Submit/Edit ITEM FORM, please set:<br/> (a) Form Configuration in Component and Content Type, <br/> (b) 'Create' / 'Edit' ACL for Category and Types, etc <br/> (c) Author/User group limitations, etc <br/><br/> -- So enable/use the following overrides only if needed, <br/><br/> -- The above mentioned configuration and ACL are needed ANYWAY in various cases and places.</span>"
+FLEXI_OPTIONAL_FORM_DISPLAY="Optional Form Data"
+FLEXI_MENU_OVERRIDE_SUBMIT_PUBLISH_ACL="<b>Override:</b> Submit/publish ACL"
+FLEXI_MENU_OVERRIDE_CATEGORY_ACL="<b>Override:</b> Category ACL"
+FLEXI_MENU_OVERRIDE_FORM_CONFIG_ACL_DESC="<b>NOTE</b>: in order to configure submit/edit item form, these are used:<br/><br/> -- Form Configuration in component and content type, <br/> -- 'Create' / 'Edit' ACL for Category and Types, etc <br/> -- Author/User group limitations, etc <br/><br/> Enable/use parameters in this menu item only if needed, <br/>-- the above mentioned configuration and <b>ACL</b> should be checked and configured <b>anyway</b>"
 FLEXI_MENU_ITEM_FORM_OVERRIDES_DESC="(effects only initial submission)"
 ;
 FLEXI_MENU_ENABLE_CATPERMS_OVERRIDE="Enable override"
@@ -1912,6 +1911,7 @@ FLEXI_ENABLE_OVERRIDE_CATEGORY_DESC="Default Category Configuration will be used
 
 FLEXI_OVERRIDE_CONF_NO="No, use defaults"
 FLEXI_OVERRIDE_CONF_YES="Yes, use parameters below"
+FLEXI_JOOMLA_DEFAULT="Joomla 's default"
 
 FLEXI_PARAMETERS_CAT_BASIC_OVERRIDE_CONF="Basic Parameters <small style='color:darkgreen;'>(enable override here)</small>"
 FLEXI_PARAMETERS_CAT_INFO_OPTIONS_OVERRIDE="<b style='color:darkgreen;'>override:</b> Parameters: <small>Category Info & Options</small>"
@@ -2791,9 +2791,11 @@ FLEXI_NO_RECOMMENDED="No (Recommended)"
 FLEXI_AUTO="Automatic"
 
 ; Item Form Configuration: CAPTCHA
+FLEXI_CAPTCHA_PLG="Captcha plugin"
+FLEXI_CAPTCHA_PLG_DESC="Select a specific captcha plugin, to override the default setting"
 FLEXI_SHOW_CAPTCHA_CRITERIA="Form Security Field <br/><small>Display criteria for CAPTCHA</small>"
-FLEXI_USER_TYPE="User Type"
-FLEXI_USER_TYPE_DESC="When use belongs to the selected type"
+FLEXI_USE_CAPTCHA="Use captcha"
+FLEXI_USE_CAPTCHA_DESC="Select when to display a captcha security field, to protect the form from robots"
 FLEXI_GUESTS="Guests"
 FLEXI_GUESTS_RECOMMENEDED="Guests (Recommeneded)"
 FLEXI_ANY_USER="Any user"
