--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -1376,8 +1376,8 @@ FLEXI_VERSION_CHECKING="Version Checking"
 FLEXI_META_RIGHTS_DESC="Describe what rights others have to use this content."
 FLEXI_META_RIGHTS_LABEL="Content Rights"
 FLEXI_METADATA_AUTHOR_DESC="The author of this content"
-FLEXI_METADATA_ROBOTS_DESC="Robots Instructions"
-FLEXI_METADATA_ROBOTS_LABEL="Robots"
+FLEXI_METADATA_ROBOTS_DESC="Indicate if robots of search-engines will include this content into their search index and if they will follow (aka index) links contained in this"
+FLEXI_METADATA_ROBOTS_LABEL="Search-engine robots"
 FLEXI_FIELD_XREFERENCE_DESC="An optional reference used to link to external data sources."
 FLEXI_FIELD_XREFERENCE_LABEL="External Reference"
 FLEXI_FIELD_CREATED_BY_ALIAS_DESC="You can enter here an alias to be displayed instead of the name of the user who created the article."
