# Fixed issue with "update temporary data" after creating new FC item and relogin related to lang_parent_id column

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -2504,7 +2504,7 @@ FLEXI_FIELD_SINGLE_VALUE_PREFIX_TEXT_DESC="This text is placed immediately <b>be
 FLEXI_FIELD_SINGLE_VALUE_SUFFIX_TEXT="Suffix text of the value"
 FLEXI_FIELD_SINGLE_VALUE_SUFFIX_TEXT_DESC="This text is placed immediately <b>after</b> the field value"
 FLEXI_FIELD_EXTRA_ATTRIBUTES="Field attributes"
-FLEXI_FIELD_EXTRA_ATTRIBUTES_DESC="Here you can enter some extra attibutes (HTML Tag Parameters) for the form field like e.g. onkeypress='...' onmouseover='...' somename='somevalue'. Take care not to break the the HTML syntax of the form field"
+FLEXI_FIELD_EXTRA_ATTRIBUTES_DESC="Here you can enter some extra attibutes (HTML Tag Parameters) for the form field like e.g. onkeypress=&quot;...&quot; onmouseover=&quot;...&quot; somename=&quot;somevalue&quot;. Take care not to break the the HTML syntax of the form field"
 FLEXI_FIELD_PLACEHOLDER="Placeholder"
 FLEXI_FIELD_PLACEHOLDER_DESC="A word / short text inside the input visible before user starts typing"
 
