+ Added options in the "image source" configuration TAB to allow creating a simpler image upload case (DB-mode), e.g. disabling existing image selection list, removing the toggle button, and auto-cleaning unused old image file, TODO similar work for file field, to create a simple inline file upload behaviour for the file field

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -377,9 +377,12 @@ FLEXI_FILE_FILTER_REGEX_DESC="For advanced users only!!! You can specify here a 
 FLEXI_FILE_LANGUAGE_DESC="You may want to set file language, e.g. if file is a document in specific language, or media that contains audio or text in specific language"
 FLEXI_FILE_DESCRIPTION_DESC="This can be used by some fields, e.g. it can be optionally displayed (inline, tooltip, etc) by the file field"
 
+FLEXI_UPLOAD_LIMIT="Upload limit"
 FLEXI_UPLOAD_LIMITS="Upload limits"
 FLEXI_CONF_UPLOAD_MAX_LIMIT="Configuration maximum"
 FLEXI_CONF_UPLOAD_MAX_LIMIT_DESC="Component configuration is limiting your upload to this value"
+FLEXI_FIELD_CONF_UPLOAD_MAX_LIMIT="Field maximum"
+FLEXI_FIELD_CONF_UPLOAD_MAX_LIMIT_DESC="Field configuration is limiting your upload to this value"
 FLEXI_SERVER_UPLOAD_MAX_LIMIT="Server maximum"
 FLEXI_SERVER_UPLOAD_MAX_LIMIT_DESC="Server PHP configuration variable '%s' is limiting your upload to this value"
 
@@ -1337,6 +1340,7 @@ FLEXI_ALWAYS_CREATE_FIELDS_DISPLAY="Always create field HTML"
 FLEXI_ALWAYS_CREATE_FIELDS_DISPLAY_DESC="It is strongly recommended that you set this to ONLY WHEN NEEDED, so that system will create fields only if they are displayed. If you have compatibility problem, of fields not displaying, try enabling this."
 FLEXI_ONLY_WHEN_NEEDED="Only When needed (Recommended)"
 FLEXI_ALWAYS_NOT_RECOMMENDED="Always (Not Recommended)"
+FLEXI_TOGGLE="Toggle"
 FLEXI_ALWAYS="Always"
 FLEXI_SHOW_ALWAYS="Show always"
 FLEXI_ONLY_IN_ITEM_VIEW="Only in item view"
