+ Prepared adding (items) edit, edit.own, edit.state, edit.state.own, delete, delete.own privileges in type configuration ('create' is already there), also cleaner item ACL access check moved all work into the model for item view / item form, into item model method getItemAccess, including temporary edit allowed and edit coupon checks

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -339,7 +339,7 @@ FLEXI_CHOOSE_FILE_DESC="Please take note of the upload limits"
 FLEXI_COMING_SOON="Coming soon ;-)"
 FLEXI_FILEEXT_MIME="MIME type <small>(example: jpg)</small>"
 FLEXI_FILEEXT_MIME_DESC="This maybe used for filtering filemanager / file-element listings, it is reported to the user's browser when VIEWing instead of downloading and may allow user browser to call proper viewer, also for known file types an icon maybe displayed too"
-FLEXI_FILE_DIRECTORY="Choose target directory"
+FLEXI_TARGET_DIRECTORY="Target directory"
 FLEXI_FILE_URL="File URL"
 FLEXI_FILE_URL_DESC="Enter an absolute file URL"
 FLEXI_SIZE="Size"
@@ -3106,6 +3106,9 @@ FLEXI_BE_NEW="New"
 FLEXI_UPLOAD="Upload"
 FLEXI_WHY="Why"
 FLEXI_HOW_TO="How to"
+FLEXI_POPUP="Popup"
+FLEXI_INLINE="Inline"
+
 
 FLEXI_BASIC_DISPLAY="Basic Display"
 
