# Fixed/implemented form reloading of core and custom field values in frontend/backend item form, when an error will occur, e.g. bad captcha or a field cancels item creation or item update, then all form data should be reloaded.

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -927,6 +927,7 @@ FLEXI_INTRO_COLS="Intro Columns"
 
 FLEXI_MAX_ITEM_COLS_RESPONSIVE="Max item columns (responsive)"
 FLEXI_ITEMS_PLACEMENT="Items placement"
+FLEXI_FLOATED_LEFT="Floated left"
 FLEXI_CLEARED="Cleared"
 FLEXI_AS_MASONRY_TILES="As masonry tiles"
 FLEXI_LEADING_NUM="# Leading"
