^ Improvements for description / textarea fields, adding override for custom editor to both fields and custom validation to description field like in textarea field

--- a/admin/language/en-GB.com_flexicontent.ini
+++ b/admin/language/en-GB.com_flexicontent.ini
@@ -198,7 +198,7 @@ FLEXI_PARAMETERS_ADVANCED="Advanced parameters"
 FLEXI_PLEASE_PUBLISH_PLUGIN="Please publish the FLEXIcontent fields plugins"
 FLEXI_REVISED="Revised"
 FLEXI_SCORE="Score"
-FLEXI_TAKE_CARE_CHANGING_FIELD_TYPE="Please take care when changing field type. All fields values will be permanently deleted !!!"
+FLEXI_TAKE_CARE_CHANGING_FIELD_TYPE="Please take care when changing field type. After saving all fields that are not assigned to the new content type, will have their values permanently deleted !!!"
 FLEXI_TIMES="times"
 FLEXI_TYPE="Item&nbsp;type"
 FLEXI_VERSION_NR="Version nr."
@@ -782,6 +782,8 @@ FLEXI_FIELD_ELEMENTS_DESC="Field elements. The syntax is the following:<br/> val
 FLEXI_FIELD_ELEMENTS="Field elements"
 FLEXI_FIELD_HEIGHT_DESC="HTML editor height"
 FLEXI_FIELD_HEIGHT="Editor height"
+FLEXI_FIELD_WIDTH_DESC="HTML editor width"
+FLEXI_FIELD_WIDTH="Editor width"
 FLEXI_FIELD_HITS="hits"
 FLEXI_FIELD_IMAGEDIR_DESC="Radio/Checkbox image directory"
 FLEXI_FIELD_IMAGEDIR="Radio/Checkbox image directory"
